style: fix case study list on mobile

--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,7 @@ main {
 
 .case-study ul {
     display: flex;
+    flex-direction: column;
     gap: 1rem;
     padding-left: 0;
     color: #344054;
@@ -278,6 +279,9 @@ main {
     }
     .web img {
         border-radius: 0;
+    }
+    .case-study ul {
+        flex-direction: row;
     }
 }
 
